2009-05-08  Andy Buckley  <andy@insectnation.org>

	* Adding rivet-mkanalysis script, to make generating new analysis
	source templates easier.

2009-05-07  Andy Buckley  <andy@insectnation.org>

	* Adding null vector check to Vector3::azimuthalAngle().

	* Fixing definition of HCM/Breit frames in DISKinematics, and
	adding asserts to check that the transformation is doing what it
	should.

2009-05-05  Andy Buckley  <andy@insectnation.org>

	* Removing eta and Et cuts from CDF 2000 Z pT analysis, based on
	our reading of the paper, and converting most of the analysis to a
	call of the ZFinder projection.

2009-05-05  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Support non-default seed_threshold in CDF cone jet algorithms.

	* New analyses STAR_2006_S6870392 and STAR_2008_S7993412. In
	STAR_2008_S7993412 only the first distribution is filled at the
	moment. STAR_2006_S6870392 is normalised to data instead of the
	Monte Carlo cross-section, since we don't have that available
	in the HepMC stream yet.

2009-05-05  Andy Buckley  <andy@insectnation.org>

	* Changing Event wrapper to copy whole GenEvents rather than
	pointers, use std units if supported in HepMC, and run a
	placeholder function for event auto-orientation.

2009-04-28  Andy Buckley  <andy@insectnation.org>

	* Removing inclusion of IsolationTools header by analyses that
	aren't actually using the isolation tools... which is all of
	them. Leaving the isolation tools in place for now, as there might
	still be use cases for them and there's quite a lot of code there
	that deserves a second chance to be used!

2009-04-24  Andy Buckley  <andy@insectnation.org>

	* Deleting Rivet implementations of TrackJet and D0ILConeJets: the
	code from these has now been incorporated into FastJet 2.4.0.

	* Removed all mentions of the FastJet JADE patch and the HAVE_JADE
	preprocessor macro.

	* Bug fix to D0_2008_S6879055 to ensure that cuts compare to both
	electron and positron momenta (was just comparing against